# rag-salesforce-architect

./: .env.example  .gitignore  README.md  pyproject.toml
data/raw/: demo.txt
src/rag_salesforce_architect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rag_sf_architect/: config.py
src/rag_sf_architect/api/: main.py
src/rag_sf_architect/ingest/: build_index.py  chunking.py  loaders.py
src/rag_sf_architect/retrieve/: retriever.py
src/rag_sf_architect/scripts/: ingest_local.py  query_local.py
